--- a/BMI_Calculator/BMI_Calculator.csproj
+++ b/BMI_Calculator/BMI_Calculator.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animation.cs" />
     <Compile Include="BMICalculator.cs">
       <SubType>Form</SubType>
     </Compile>
