--- a/BMI_Calculator/BMI_Calculator.csproj
+++ b/BMI_Calculator/BMI_Calculator.csproj
@@ -55,6 +55,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StartApplication.Designer.cs">
+      <DependentUpon>StartApplication.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BMICalculator.resx">
       <DependentUpon>BMICalculator.cs</DependentUpon>
     </EmbeddedResource>
